deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e-commerce
  template:
    metadata:
      labels:
        app: e-commerce
    spec:
      containers:
        - name: e-commerce
          image: gcr.io/adroit-resolver-451311-f1/e-commerce:latest
          ports:
            - containerPort: 8080
