ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-ingress
spec:
  rules:
    - host: nykart.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: e-commerce-service
                port:
                  number: 80
